# ArUco_Test

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  collect_aruco_data.cpp  run_test.cpp
config/: sensor_setting_example.yaml  vision_system_config.yaml  vision_system_config_example.yaml
include/: common.h  system.h
include/camera/: brown_conrady.h  camera.h  pinhole.h
include/imu/: imu_reader.h
include/marker/: aruco_detector.h
include/port/: config.h  setting.h
src/: CMakeLists.txt  system.cpp
src/camera/: camera.cpp
src/imu/: imu_reader.cpp
src/marker/: aruco_detector.cpp
src/port/: config.cpp  setting.cpp
test/: CMakeLists.txt  detect_aruco_for_data_collection.cpp  tello_flight_test.cpp  tello_sensor_test.cpp  tello_test.cpp  tello_vision_test.cpp  tello_vision_test_minimal.cpp
